# atlas-pipeline-v1

./: .gitignore  CLAUDE.md  CONTINUATION_PLAN.md  DEPLOYMENT.md  PHASE_2_SUMMARY.md  README.md  coverage.xml  demo_customer_data.csv  docker-compose.yml
.claude/skills/: fix-typescript.md  setup.md  start.md  verify.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AIRBYTE_COMPLETION_STATUS.md  ATLAS_INTELLIGENCE_STATUS.md  Dockerfile  Dockerfile.simple  HOW_TO_TEST.md  Makefile  PHASE1_WEEK2_README.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_4_TEST_RESULTS.md  QUICKSTART.md  QUICKSTART_API.md  README.md  README_WEEK4.md  START_HERE.md  WEEK3_FILES.md  WEEK3_IMPLEMENTATION.md  WEEK4_CONNECTORS.md  WEEK4_STATUS.md  WEEK4_SUMMARY.md  WEEK5_6_QUICKREF.md  docker-compose.yml  install_week3.sh  pyproject.toml  requirements-ci.txt  requirements-simple.txt  requirements-test.txt  requirements.txt  simple_main.py  test_api.sh  test_complete_platform.sh  test_phase4.py  test_week4.sh  test_week4_quick.sh  test_week5_quickstart.sh
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/ai/: __init__.py  embeddings.py
backend/app/api/: main.py
backend/app/api/routes/: ai_query.py  atlas_intelligence.py  audit.py  auth.py  compliance_assessment.py  dashboard.py  decisions.py  demo.py  documents.py  enhanced_catalog.py  governance.py  kpi.py  model_registry.py  pipeline.py  quality.py  rbac.py  reports.py
backend/app/auth/: __init__.py  api_keys.py  rbac.py
backend/app/catalog/: __init__.py  catalog.py  enhanced_catalog.py
backend/app/compliance/: __init__.py  eu_ai_act_mapper.py  gdpr.py
backend/app/connectors/: __init__.py  base.py  google_sheets.py  kafka.py  mysql.py  postgresql.py  registry.py  rest_api.py  salesforce.py
backend/app/connectors/airbyte/: __init__.py  adapter.py  airbyte_orchestrator.py  airbyte_rag.py  database_writer.py  executor.py  performance.py  protocol.py  pyairbyte_executor.py  real_pyairbyte.py  registry.py  state_manager.py  sync_scheduler.py
backend/app/connectors/atlas_intelligence/: __init__.py  atlas_orchestrator.py  atlas_rag.py  database_writer.py  sync_scheduler.py
backend/app/core/: database.py  metrics.py
backend/app/features/: __init__.py  feature_store.py
backend/app/governance/: __init__.py  roles.py
backend/app/lineage/: openlineage_client.py
backend/app/ml/: __init__.py  model_registry.py
backend/app/monitoring/: __init__.py  health.py  metrics.py
backend/app/pipeline/core/: orchestrator.py
backend/app/pipeline/pii/: detector.py  presidio_detector.py
backend/app/pipeline/quality/: checker.py  custom_rules.py  soda_validator.py
backend/app/processors/: __init__.py  document_extractor.py
backend/app/reports/: __init__.py  compliance_report.py
backend/app/scheduler/: __init__.py  celery_app.py  tasks.py
backend/app/storage/: __init__.py  data_store.py
backend/database/init/: 01_enable_pgvector.sql
backend/database/migrations/: 001_core_tables_explore_chart_navigate.sql  002_pipeline_metadata.sql  003_quality_metrics.sql  004_compliance.sql  005_week3_presidio_soda.sql  006_week4_connectors.sql  007_week5_lineage_gdpr.sql  008_airbyte_integration.sql
backend/docs/: API.md  ARCHITECTURE.md  DAY4_SUMMARY.md  DAY_3_DOCKER_DATABASE_SETUP.md  EXECUTIVE_SUMMARY_WEEK1.md  METRICS.md  QUICK_VERIFICATION_GUIDE.md  SETUP.md  WEEK1_COMPLETION_REPORT.md  WEEK1_TEAM_REVIEW.md  WEEK5_6_IMPLEMENTATION_SUMMARY.md  WEEK5_6_LINEAGE_GDPR.md  WORKFLOW.md
backend/examples/: 01_adamiao_presidio_pii_detection.py  04_soda_core_quality_checks.py  05_opsdroid_bot_integration.py  QUICK_REFERENCE.md
backend/scripts/: db-health-check.sh  init-db.sql  setup_venv.sh  test-db-connectivity.py  test_e2e_pipeline.py  validate_setup.sh  verify-setup.sh
backend/tests/: conftest.py
backend/tests/api/: test_atlas_intelligence.py  test_dashboard.py
backend/tests/connectors/: test_google_sheets.py  test_salesforce.py
backend/tests/connectors/airbyte/: __init__.py  test_adapter.py  test_docker_executor.py  test_protocol.py  test_pyairbyte_executor.py  test_registry.py  test_state_db.py  test_state_manager.py  test_sync_scheduler.py
backend/tests/connectors/atlas_intelligence/: test_pyairbyte_executor.py  test_state_manager.py  test_sync_scheduler.py
backend/tests/integration/: test_airbyte_e2e.py  test_atlas_intelligence_e2e.py  test_week1_deployment.py  test_week3_pipeline.py  test_week5_integration.py
backend/tests/phase6/: __init__.py  test_data_store.py  test_model_registry.py  test_rbac.py
backend/tests/pipeline/: test_integration.py
backend/tests/unit/: test_connectors.py  test_presidio_detector.py  test_soda_validator.py
docs/: AIRBYTE_DOCKER_INTEGRATION.md  ATLAS_COMPLETE_STATUS.md  ATLAS_INTELLIGENCE_DEPLOYMENT.md  ATLAS_STANDARD_TIMELINE.md  Atlas Intelligence Data Pipeline Standard.md  CLAUDE.md  EXPLORATION_GUIDE.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_WEEK1_VALIDATION.md  HVAD_KAN_JEG_VISE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_SUMMARY.md  PHASE1_WEEK1_COMPLETE.md  PHASE_6_IMPLEMENTATION.md  PRODUCTION_KICKOFF.md  PROJECT_STATUS.md  README.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  USE_CASES.md  WEEK1_FINAL_STATUS.md
frontend/: BUILD_SUMMARY.md  CLAUDE.md  COMPLETION_SUMMARY.md  DELIVERABLES.md  DELIVERY_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  E2E_TESTS_COMPLETE.md  FRONTEND_FIXES_COMPLETE.md  INTEGRATION_CHECKLIST.md  PLAYWRIGHT_TEST_RESULTS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  QUICK_START_WEEK5-6.md  README.md  SETUP.md  START_API_SERVER.md  TASK_BACKLOG_CHECKLIST.md  VISUAL_GUIDE.md  WEEK5-6_INTEGRATION_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json  personal-os.sh  playwright.config.ts  sarah-techcorp-intro-email.md  schema.sql  tailwind.config.js  test_data.csv  verify.sh
logs/: swarm_post_tool_use.json  swarm_pre_tool_use.json
scripts/: backup-cron  backup.sh  pre-pr-test.sh  restore.sh
(+104 files in other folders)
