[project]
name = "atlas-pipeline"
version = "0.1.0"
description = "Atlas Data Pipeline Platform - Production-grade data infrastructure with medallion architecture, PII detection, and data quality validation"
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Atlas Team", email = "team@atlas.local"}
]
keywords = ["data-pipeline", "etl", "pii-detection", "data-quality", "medallion-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core FastAPI & Web
    "fastapi[standard]>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.25.0,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "httpx>=0.25.1,<1.0.0",

    # Database & ORM
    "sqlalchemy>=2.0.0,<3.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",

    # Data Processing
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=14.0.0,<15.0.0",
    "polars>=0.20.0,<1.0.0",

    # Pipeline & Orchestration
    "prefect>=2.14.0,<3.0.0",
    "celery[redis]>=5.3.0,<6.0.0",

    # PII Detection
    "presidio-analyzer>=2.2.0,<3.0.0",
    "presidio-anonymizer>=2.2.0,<3.0.0",
    "spacy>=3.7.0,<4.0.0",

    # Data Quality
    "soda-core-postgres>=3.0.0,<4.0.0",
    "great-expectations>=0.18.0,<1.0.0",

    # Lineage & Metadata
    "openlineage-python>=1.0.0,<2.0.0",

    # Storage & Cache
    "redis>=5.0.0,<6.0.0",
    "boto3>=1.34.0,<2.0.0",
    "minio>=7.2.0,<8.0.0",

    # Authentication & Security
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.3.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "cryptography>=41.0.0,<42.0.0",

    # Configuration & Settings
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",

    # Utilities
    "tenacity>=8.2.3,<9.0.0",
    "pendulum>=2.1.2,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",

    # Validation & Parsing
    "email-validator>=2.1.0,<3.0.0",
    "phonenumbers>=8.13.0,<9.0.0",

    # Monitoring & Observability
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",

    # Templates & Email
    "jinja2>=3.1.4,<4.0.0",
    "emails>=0.6,<1.0",
]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-env>=1.1.0,<2.0.0",
    "coverage[toml]>=7.4.3,<8.0.0",
    "faker>=22.0.0,<23.0.0",

    # Type Checking & Linting
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "black>=24.1.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",

    # Type Stubs
    "types-passlib>=1.7.7,<2.0.0",
    "types-redis>=4.6.0,<5.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "pandas-stubs>=2.1.0,<3.0.0",

    # Development Tools
    "pre-commit>=3.6.0,<4.0.0",
    "ipython>=8.20.0,<9.0.0",
    "ipdb>=0.13.0,<1.0.0",

    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# MYPY - Type Checking Configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

exclude = [
    "venv",
    ".venv",
    "alembic",
    "tests",
    "examples",
]

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "soda.*",
    "great_expectations.*",
    "openlineage.*",
    "celery.*",
    "prefect.*",
]
ignore_missing_imports = true

# ============================================================================
# RUFF - Linting & Formatting Configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "T201",   # print statements
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "W191",   # indentation contains tabs
    "B904",   # Allow raising exceptions without from e
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201", "ARG001", "PLR2004"]
"examples/**/*.py" = ["T201"]
"app/alembic/**/*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# ============================================================================
# BLACK - Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | alembic
  | build
  | dist
)/
'''

# ============================================================================
# PYTEST - Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "pipeline: marks tests for pipeline components",
    "pii: marks tests for PII detection",
    "quality: marks tests for data quality",
]

# ============================================================================
# COVERAGE - Test Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
    "*/examples/*",
]
dynamic_context = "test_function"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# ISORT - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/alembic/*", "*/venv/*", "*/.venv/*"]
known_first_party = ["app"]

# ============================================================================
# BANDIT - Security Linting
# ============================================================================
[tool.bandit]
targets = ["app"]
exclude_dirs = [
    "tests",
    "alembic",
    "examples",
    ".venv",
    "venv",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - false positives
]

# ============================================================================
# COMMITIZEN - Commit Message Format
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
